--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="styles/styles.css" >
 </head>
 
 <body>
 
   <header class="jumbotron">
     <div class="container">
-      <div class="row">
+      <div class="row row-header">
         <div class="col-12 col-sm-6">
           <h1>Ristorante con Fusion</h1>
           <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations
@@ -29,18 +30,18 @@
   </header>
 
   <div class="container">
-    <div class="row">
-      <div class="col-12 col-sm-4 push-sm-8 col-md-3 push-md-9">
+    <div class="row row-content align-items-center">
+      <div class="col-12 col-sm-4 flex-last col-md-3">
         <h3>Our Lipsmacking Culinary Creations</h3>
       </div>
-      <div class="col col-sm pull-sm-4 col-md pull-md-3">
+      <div class="col col-sm flex-first col-md">
         <h2>Uthappizza</h2>
         <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry
           tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
       </div>
     </div>
 
-    <div class="row">
+    <div class="row row-content align-items-center">
       <div class="col-12 col-sm-4 col-md-3">
         <h3>This Month's Promotions</h3>
       </div>
@@ -51,11 +52,11 @@
       </div>
     </div>
 
-    <div class="row">
-      <div class="col-12 col-sm-4 push-sm-8 col-md-3 push-md-9">
+    <div class="row row-content align-items-center">
+      <div class="flex-last col-12 col-sm-4 col-md-3">
         <h3>Meet our Culinary Specialists</h3>
       </div>
-      <div class="col col-sm pull-sm-4 col-md pull-md-3">
+      <div class="flex-first col col-sm col-md">
         <h2>Alberto Somayya</h2>
         <h4>Executive Chef</h4>
         <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in
@@ -64,12 +65,12 @@
     </div>
   </div>
 
-  <footer>
+  <footer class="footer">
     <div class="container">
       <div class="row">
         <div class="col-4 offset-1 col-sm-2">
           <h5>Links</h5>
-          <ul>
+          <ul class="list-unstyled">
             <li>
               <a href="#">Home</a>
             </li>
@@ -96,7 +97,7 @@
             <a href="mailto:confusion@food.net">confusion@food.net</a>
           </address>
         </div>
-        <div class="col-12 col-sm-4">
+        <div style="text-align: center" class="col-12 col-sm-4 align-self-center">
           <div>
             <a href="http://google.com/+">Google+</a>
             <a href="http://www.facebook.com/profile.php?id=">Facebook</a>
@@ -107,8 +108,8 @@
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-auto">
+      <div class="row justify-content-center">
+        <div class="col-auto ">
           <p>© Copyright 2015 Ristorante Con Fusion</p>
         </div>
       </div>
