--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="styles/styles.css" >
+  <link rel="stylesheet" type="text/css" href="styles/styles.css" >
 </head>
 
 <body>
@@ -36,7 +36,7 @@
       </div>
       <div class="col col-sm flex-first col-md">
         <h2>Uthappizza</h2>
-        <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry
+        <p class="hidden-xs-down">A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry
           tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
       </div>
     </div>
@@ -47,7 +47,7 @@
       </div>
       <div class="col col-sm col-md">
         <h2>Weekend Grand Buffet</h2>
-        <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees
+        <p class="hidden-xs-down">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees
           and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
       </div>
     </div>
@@ -59,7 +59,7 @@
       <div class="flex-first col col-sm col-md">
         <h2>Alberto Somayya</h2>
         <h4>Executive Chef</h4>
-        <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in
+        <p class="hidden-xs-down">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in
           the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
       </div>
     </div>
@@ -75,7 +75,7 @@
               <a href="#">Home</a>
             </li>
             <li>
-              <a href="#">About</a>
+              <a href="aboutus.html">About</a>
             </li>
             <li>
               <a href="#">Menu</a>
